probe/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: example-app-ingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: example-app-ingress
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-app-ingress
    spec:
      containers:
      - name: prometheus-example-app
        image: ghcr.io/rhobs/prometheus-example-app:0.4.1
        ports:
        - name: web
          containerPort: 8080
