probe/ingress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-app-ingress
  namespace: default
  labels:
    app.kubernetes.io/name: example-app-ingress
spec:
  selector:
    app.kubernetes.io/name: example-app-ingress
  type: NodePort
  ports:
  - name: web
    port: 8080
